examples/ext-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: baidu
spec:
  hosts:
  - "baidu.10.110.20.11.xip.io"
  gateways:
  - iop-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: www.baidu.com
        port:
          number: 80
